# Auto-generated by scripts/fetch-schema.mjs via introspection
# Source: https://test-dev.openframe.build/api/graphql
# Generated: 2026-03-25T21:14:41.663Z
#
# Do not edit manually. Re-run: npm run fetch-schema
directive @extends on OBJECT | INTERFACE

directive @external on FIELD_DEFINITION

directive @key(fields: _FieldSet!) on OBJECT | INTERFACE

directive @provides(fields: _FieldSet!) on FIELD_DEFINITION

directive @requires(fields: _FieldSet!) on FIELD_DEFINITION

type APIKey {
  key: String!
  type: APIKeyType!
  keyName: String
}

enum APIKeyType {
  HEADER
  BEARER_TOKEN
}

type Address {
  street1: String
  street2: String
  city: String
  state: String
  postalCode: String
  country: String
}

enum BillingPeriod {
  MONTHLY
  YEARLY
}

"""
BillingPlan represents a subscription tier with specific features.
"""
type BillingPlan {
  """
  HubSpot billing plan record ID
  """
  hubspotId: String!

  """
  Display name of the billing plan
  """
  name: String!

  """
  List of enabled product features
  """
  enabledProducts: [OpenframeProduct!]!
}

"""
--- Billing Plan (detailed) ---
"""
type BillingPlanDetails {
  id: String!
  name: String!
  description: String
  version: String
  status: String
  trialDurationDays: Int
  effectiveDate: Date
  endDate: Date
  products: [Product!]!
  subscriptionProducts: [SubscriptionProduct!]!
}

"""
BillingPlanInfo represents a billing plan available in HubSpot.
"""
type BillingPlanInfo {
  """
  HubSpot billing plan record ID
  """
  id: ID!

  """
  Display name of the billing plan
  """
  name: String!

  """
  Billing plan version
  """
  version: String!

  """
  List of enabled product features
  """
  enabledProducts: [OpenframeProduct!]!
}

input CheckoutInput {
  products: [ProductCheckoutInput!]!
  discountCode: String
}

"""
--- Subscription / Checkout ---
"""
type CheckoutResult {
  checkoutUrl: String!
  subscription: SubscriptionInfo
}

enum ConnectionStatus {
  CONNECTED
  DISCONNECTED
  ERROR
}

type ContactInformation {
  contacts: [ContactPerson!]!
  physicalAddress: Address
  mailingAddress: Address
  mailingAddressSameAsPhysical: Boolean
}

type ContactPerson {
  contactName: String
  title: String
  phone: String
  email: String
}

input CreateEventInput {
  userId: String!
  type: String!
  data: String
}

"""
"""
scalar Date

type DeviceConnection {
  edges: [DeviceEdge!]!
  pageInfo: PageInfo!
  filteredCount: Int!
}

type DeviceEdge {
  node: Machine!
  cursor: String!
}

input DeviceFilterInput {
  statuses: [DeviceStatus!]
  deviceTypes: [DeviceType!]
  osTypes: [String!]
  organizationIds: [String!]
  tagKeys: [String!]
  tagValues: [String!]
}

type DeviceFilterOption {
  value: String!
  label: String!
  count: Int!
}

type DeviceFilters {
  statuses: [DeviceFilterOption!]!
  deviceTypes: [DeviceFilterOption!]!
  osTypes: [DeviceFilterOption!]!
  organizationIds: [DeviceFilterOption!]!
  tagKeys: [TagFilterOption!]!
  filteredCount: Int!
}

enum DeviceStatus {
  PENDING
  ACTIVE
  INACTIVE
  MAINTENANCE
  DECOMMISSIONED
  ONLINE
  OFFLINE
  DELETED
  ARCHIVED
}

"""
Tag as assigned to a device (key + values)
"""
type DeviceTag {
  tagId: String!
  key: String!
  description: String
  color: String
  values: [String!]!
  createdAt: Instant
}

enum DeviceType {
  DESKTOP
  LAPTOP
  SERVER
  MOBILE_DEVICE
  TABLET
  NETWORK_DEVICE
  IOT_DEVICE
  VIRTUAL_MACHINE
  CONTAINER_HOST
  OTHER
}

"""
--- Discount ---
"""
type DiscountValidation {
  discountId: String
  code: String!
  name: String
  type: String
  applicableProducts: [OpenframeProduct!]!
  value: Float
  durationInMonths: Int
  valid: Boolean!
  reason: String
}

enum ErrorDetail {
  """
  Unknown error.

  This error should only be returned when no other error detail applies.
  If a client sees an unknown errorDetail, it will be interpreted as UNKNOWN.

  HTTP Mapping: 500 Internal Server Error
  """
  UNKNOWN

  """
  The requested field is not found in the schema.

  This differs from `NOT_FOUND` in that `NOT_FOUND` should be used when a
  query is valid, but is unable to return a result (if, for example, a
  specific video id doesn't exist). `FIELD_NOT_FOUND` is intended to be
  returned by the server to signify that the requested field is not known to exist.
  This may be returned in lieu of failing the entire query.
  See also `PERMISSION_DENIED` for cases where the
  requested field is invalid only for the given user or class of users.

  HTTP Mapping: 404 Not Found
  Error Type: BAD_REQUEST
  """
  FIELD_NOT_FOUND

  """
  The provided cursor is not valid.

  The most common usage for this error is when a client is paginating
  through a list that uses stateful cursors. In that case, the provided
  cursor may be expired.

  HTTP Mapping: 404 Not Found
  Error Type: NOT_FOUND
  """
  INVALID_CURSOR

  """
  The operation is not implemented or is not currently supported/enabled.

  HTTP Mapping: 501 Not Implemented
  Error Type: BAD_REQUEST
  """
  UNIMPLEMENTED

  """
  The client specified an invalid argument.

  Note that this differs from `FAILED_PRECONDITION`.
  `INVALID_ARGUMENT` indicates arguments that are problematic
  regardless of the state of the system (e.g., a malformed file name).

  HTTP Mapping: 400 Bad Request
  Error Type: BAD_REQUEST
  """
  INVALID_ARGUMENT

  """
  The deadline expired before the operation could complete.

  For operations that change the state of the system, this error
  may be returned even if the operation has completed successfully.
  For example, a successful response from a server could have been
  delayed long enough for the deadline to expire.

  HTTP Mapping: 504 Gateway Timeout
  Error Type: UNAVAILABLE
  """
  DEADLINE_EXCEEDED

  """
  Service Error.

  There is a problem with an upstream service.

  This may be returned if a gateway receives an unknown error from a service
  or if a service is unreachable.
  If a request times out which waiting on a response from a service,
  `DEADLINE_EXCEEDED` may be returned instead.
  If a service returns a more specific error Type, the specific error Type may
  be returned instead.

  HTTP Mapping: 502 Bad Gateway
  Error Type: UNAVAILABLE
  """
  SERVICE_ERROR

  """
  Request throttled based on server CPU limits

  HTTP Mapping: 503 Unavailable.
  Error Type: UNAVAILABLE
  """
  THROTTLED_CPU

  """
  Request throttled based on server concurrency limits.

  HTTP Mapping: 503 Unavailable
  Error Type: UNAVAILABLE
  """
  THROTTLED_CONCURRENCY

  """
  The server detected that the client is exhibiting a behavior that
  might be generating excessive load.

  HTTP Mapping: 429 Too Many Requests or 420 Enhance Your Calm
  Error Type: UNAVAILABLE
  """
  ENHANCE_YOUR_CALM

  """
  Request failed due to network errors.

  HTTP Mapping: 503 Unavailable
  Error Type: UNAVAILABLE
  """
  TCP_FAILURE

  """
  Unable to perform operation because a required resource is missing.

  Example: Client is attempting to refresh a list, but the specified
  list is expired. This requires an action by the client to get a new list.

  If the user is simply trying GET a resource that is not found,
  use the NOT_FOUND error type. FAILED_PRECONDITION.MISSING_RESOURCE
  is to be used particularly when the user is performing an operation
  that requires a particular resource to exist.

  HTTP Mapping: 400 Bad Request or 500 Internal Server Error
  Error Type: FAILED_PRECONDITION
  """
  MISSING_RESOURCE
}

enum ErrorType {
  """
  Unknown error.

  For example, this error may be returned when
  an error code received from another address space belongs to
  an error space that is not known in this address space.  Also
  errors raised by APIs that do not return enough error information
  may be converted to this error.

  If a client sees an unknown errorType, it will be interpreted as UNKNOWN.
  Unknown errors MUST NOT trigger any special behavior. These MAY be treated
  by an implementation as being equivalent to INTERNAL.

  When possible, a more specific error should be provided.

  HTTP Mapping: 520 Unknown Error
  """
  UNKNOWN

  """
  Internal error.

  An unexpected internal error was encountered. This means that some
  invariants expected by the underlying system have been broken.
  This error code is reserved for serious errors.

  HTTP Mapping: 500 Internal Server Error
  """
  INTERNAL

  """
  The requested entity was not found.

  This could apply to a resource that has never existed (e.g. bad resource id),
  or a resource that no longer exists (e.g. cache expired.)

  Note to server developers: if a request is denied for an entire class
  of users, such as gradual feature rollout or undocumented allowlist,
  `NOT_FOUND` may be used. If a request is denied for some users within
  a class of users, such as user-based access control, `PERMISSION_DENIED`
  must be used.

  HTTP Mapping: 404 Not Found
  """
  NOT_FOUND

  """
  The request does not have valid authentication credentials.

  This is intended to be returned only for routes that require
  authentication.

  HTTP Mapping: 401 Unauthorized
  """
  UNAUTHENTICATED

  """
  The caller does not have permission to execute the specified
  operation.

  `PERMISSION_DENIED` must not be used for rejections
  caused by exhausting some resource or quota.
  `PERMISSION_DENIED` must not be used if the caller
  cannot be identified (use `UNAUTHENTICATED`
  instead for those errors).

  This error Type does not imply the
  request is valid or the requested entity exists or satisfies
  other pre-conditions.

  HTTP Mapping: 403 Forbidden
  """
  PERMISSION_DENIED

  """
  Bad Request.

  There is a problem with the request.
  Retrying the same request is not likely to succeed.
  An example would be a query or argument that cannot be deserialized.

  HTTP Mapping: 400 Bad Request
  """
  BAD_REQUEST

  """
  Currently Unavailable.

  The service is currently unavailable.  This is most likely a
  transient condition, which can be corrected by retrying with
  a backoff.

  HTTP Mapping: 503 Unavailable
  """
  UNAVAILABLE

  """
  The operation was rejected because the system is not in a state
  required for the operation's execution.  For example, the directory
  to be deleted is non-empty, an rmdir operation is applied to
  a non-directory, etc.

  Service implementers can use the following guidelines to decide
  between `FAILED_PRECONDITION` and `UNAVAILABLE`:

  - Use `UNAVAILABLE` if the client can retry just the failing call.
  - Use `FAILED_PRECONDITION` if the client should not retry until
  the system state has been explicitly fixed.  E.g., if an "rmdir"
       fails because the directory is non-empty, `FAILED_PRECONDITION`
  should be returned since the client should not retry unless
  the files are deleted from the directory.

  HTTP Mapping: 400 Bad Request or 500 Internal Server Error
  """
  FAILED_PRECONDITION
}

type Event implements Node {
  id: ID!
  userId: String!
  timestamp: Instant!
  type: String!
  data: String
}

type EventConnection {
  edges: [EventEdge!]!
  pageInfo: PageInfo!
}

type EventEdge {
  node: Event!
  cursor: String!
}

input EventFilterInput {
  userIds: [String!]
  eventTypes: [String!]
  startDate: Date
  endDate: Date
}

type EventFilters {
  userIds: [String!]!
  eventTypes: [String!]!
}

type InstalledAgent implements Node {
  id: ID!
  machineId: String!
  agentType: String!
  version: String!
  createdAt: String
  updatedAt: String
}

"""
"""
scalar Instant

type IntegratedTool implements Node {
  id: ID!
  name: String!
  description: String
  icon: String
  toolUrls: [ToolUrl!]!
  type: String
  toolType: String
  category: String
  platformCategory: String
  enabled: Boolean!
  credentials: ToolCredentials

  """
  Layer information
  """
  layer: String
  layerOrder: Int
  layerColor: String

  """
  Monitoring configuration
  """
  metricsPath: String
  healthCheckEndpoint: String
  healthCheckInterval: Int
  connectionTimeout: Int
  readTimeout: Int
  allowedEndpoints: [String]
}

type LogConnection {
  edges: [LogEdge!]!
  pageInfo: PageInfo!
}

"""
Full audit details from Cassandra
"""
type LogDetails implements Node {
  id: ID!
  toolEventId: String!
  eventType: String!
  ingestDay: String!
  toolType: String!
  severity: String!
  userId: String
  deviceId: String
  hostname: String
  organizationId: String
  organizationName: String
  message: String
  timestamp: Instant!

  """
  Details as JSON string
  """
  details: String
}

type LogEdge {
  node: LogEvent!
  cursor: String!
}

type LogEvent implements Node {
  id: ID!
  toolEventId: String!
  eventType: String!
  ingestDay: String!
  toolType: String!
  severity: String!
  userId: String
  deviceId: String
  hostname: String
  organizationId: String
  organizationName: String
  summary: String
  timestamp: Instant!
}

input LogFilterInput {
  startDate: Date

  """
  Date scalar - single select
  """
  endDate: Date

  """
  Date scalar - single select
  """
  eventTypes: [String!]

  """
  Multiselect (not array)
  """
  toolTypes: [String!]

  """
  Multiselect (not array)
  """
  severities: [String!]

  """
  Multiselect (not array)
  """
  organizationIds: [String!]

  """
  Organization filter (multiselect)
  """
  deviceId: String
}

type LogFilters {
  toolTypes: [String!]!
  eventTypes: [String!]!
  severities: [String!]!
  organizations: [OrganizationFilterOption!]!
}

type Machine implements Node {
  id: ID!
  machineId: String!
  ip: String
  macAddress: String
  osUuid: String
  agentVersion: String
  status: DeviceStatus
  lastSeen: Instant
  organizationId: String
  organization: Organization
  hostname: String
  displayName: String
  serialNumber: String
  manufacturer: String
  model: String
  type: DeviceType
  osType: String
  osVersion: String
  osBuild: String
  timezone: String
  registeredAt: Instant
  updatedAt: Instant
  tags: [DeviceTag]
  toolConnections: [ToolConnection]
  installedAgents: [InstalledAgent]
}

type Mutation {
  """
  Create a Stripe checkout session for subscribing to selected products.
  """
  createCheckoutSession(input: CheckoutInput!): CheckoutResult!

  """
  Cancel the current tenant's subscription.
  """
  cancelSubscription: Boolean!

  """
  Update the current subscription (change packages, toggle PAYG).
  """
  updateSubscription(input: UpdateSubscriptionInput!): UpdateSubscriptionResult!

  """
  Detach all payment methods. Returns the count of detached methods.
  """
  detachPaymentMethods: Int!
  createEvent(input: CreateEventInput!): Event
  updateEvent(id: ID!, input: CreateEventInput!): Event
}

" Shared GraphQL schema definitions\n This file contains common types and base types used across multiple schemas\n Base types that can be extended by other schemas"
interface Node {
  id: ID!
}

"""
OpenframeProduct enum represents available product features.
"""
enum OpenframeProduct {
  AI_ASSISTANCE
  MANAGED_DEVICES
}

type Organization implements Node {
  id: ID!
  name: String!
  organizationId: String!

  """
  Generated as UUID on creation
  """
  category: String
  numberOfEmployees: Int
  websiteUrl: String
  notes: String
  contactInformation: ContactInformation
  monthlyRevenue: Float
  contractStartDate: Date
  contractEndDate: Date
  createdAt: Instant
  updatedAt: Instant
  isDefault: Boolean!
  deleted: Boolean
  deletedAt: Instant

  """
  Logo for the organization
  """
  image: OrganizationImage
}

type OrganizationConnection {
  edges: [OrganizationEdge!]!
  pageInfo: PageInfo!
  filteredCount: Int!
}

type OrganizationEdge {
  node: Organization!
  cursor: String!
}

input OrganizationFilterInput {
  category: String
  minEmployees: Int
  maxEmployees: Int
  hasActiveContract: Boolean
}

type OrganizationFilterOption {
  id: String!

  """
  organizationId (for filtering)
  """
  name: String!
}

type OrganizationImage {
  """
  URL to access the logo image
  """
  imageUrl: String!
  hash: String
  sourceType: String!
}

"""
Deprecated: Use OrganizationConnection instead
"""
type OrganizationList {
  organizations: [Organization!]!
}

input PackageUpdateInput {
  productName: OpenframeProduct!
  packageOptionId: String!
  action: UpdateAction!
  quantity: Int
}

" Date in yyyy-MM-dd format \n Relay Connection Spec page info"
type PageInfo {
  hasNextPage: Boolean!
  hasPreviousPage: Boolean!
  startCursor: String
  endCursor: String
}

input PaygUpdateInput {
  productName: OpenframeProduct!
  enabled: Boolean!
}

enum PriceModel {
  PACKAGE_PRICING
  USAGE_BASED
}

type PriceTier {
  from: Int!
  upTo: Int
  unitPrice: Float!
}

type Product {
  id: String!
  name: OpenframeProduct!
  packageOptions: [ProductOption!]!
  payAsYouGoOption: ProductOption
}

"""
--- Inputs ---
"""
input ProductCheckoutInput {
  productName: OpenframeProduct!
  packageOptionId: String
  quantity: Int
  payAsYouGoEnabled: Boolean = true
  enabled: Boolean = true
}

type ProductOption {
  id: String!
  name: String!
  description: String
  billingPeriod: BillingPeriod
  priceModel: PriceModel
  price: Float
  priceTiers: [PriceTier!]
  quantity: Int
  status: SubscriptionProductStatus
}

type Query {
  """
  Relay Node interface queries
  """
  node(id: ID!): Node
  nodes(ids: [ID!]!): [Node]!

  """
  Get the current authenticated tenant.
  Requires authentication.
  """
  currentTenant: Tenant

  """
  Get all active billing plans from HubSpot.
  Requires authentication.
  """
  activeBillingPlans: [BillingPlanInfo!]!

  """
  Get the current tenant's billing plan with full details.
  """
  billingPlan: BillingPlanDetails

  """
  Validate a discount by its ID. Returns discount details and validity.
  """
  validateDiscount(code: String!): DiscountValidation!
  logFilters(filter: LogFilterInput): LogFilters!
  logs(
    filter: LogFilterInput
    first: Int
    after: String
    last: Int
    before: String
    search: String
    sort: SortInput
  ): LogConnection!

  " Get full audit details from Cassandra when user clicks on a audit\n Requires complete composite key for efficient Cassandra lookup"
  logDetails(
    ingestDay: String!

    """
    YYYY-MM-DD format
    """
    toolType: String!

    """
    Tool type (meshcentral, tactical-rmm, etc.)
    """
    eventType: String!

    """
    Event type (login, logout, script, etc.)
    """
    timestamp: Instant!

    """
    Timestamp of the audit
    """
    toolEventId: String!
  ): LogDetails
  events(
    filter: EventFilterInput
    first: Int
    after: String
    last: Int
    before: String
    search: String
    sort: SortInput
  ): EventConnection!
  eventById(id: ID!): Event
  eventFilters(filter: EventFilterInput): EventFilters!

  """
  Get all organizations with optional filtering and pagination
  """
  organizations(
    filter: OrganizationFilterInput
    first: Int
    after: String
    last: Int
    before: String
    search: String
    sort: SortInput
  ): OrganizationConnection!

  """
  Get single organization by ID
  """
  organization(id: ID!): Organization

  """
  Get organization by organizationId
  """
  organizationByOrganizationId(organizationId: String!): Organization
  deviceFilters(filter: DeviceFilterInput): DeviceFilters!
  devices(
    filter: DeviceFilterInput
    first: Int
    after: String
    last: Int
    before: String
    search: String
    sort: SortInput
  ): DeviceConnection!

  """
  Get single device by Relay global ID
  """
  deviceById(id: ID!): Machine

  """
  Get single device by machineId
  """
  device(machineId: String!): Machine

  """
  Tag key queries
  """
  tags(organizationId: String!): [Tag!]!

  """
  Tag value options for filter UI (returns distinct values for a tag key with device counts)
  """
  tagValueOptions(tagKey: String!): [DeviceFilterOption!]!

  """
  Autocomplete queries for tag key and value search
  """
  tagKeySuggestions(organizationId: String!, search: String!): [Tag!]!
  tagValueSuggestions(organizationId: String!, tagKey: String!, search: String!): [String!]!

  " Get all integrated tools with optional filtering\n Returns a simple list since tools are limited in number (configuration data)"
  integratedTools(filter: ToolFilterInput, search: String, sort: SortInput): ToolList!

  """
  Get available tool filters
  """
  toolFilters: ToolFilters!
  _service: _Service!
}

"""
Sorting support
"""
enum SortDirection {
  ASC
  DESC
}

input SortInput {
  field: String
  direction: SortDirection
}

type SubscriptionInfo {
  id: ID!
  tenantId: String!
  status: String!
  startDate: Date
  endDate: Date
}

type SubscriptionProduct {
  productId: String!
  name: OpenframeProduct!
  packageOptions: [ProductOption!]
  payAsYouGoOption: ProductOption
}

enum SubscriptionProductStatus {
  ACTIVE
  PENDING_ACTIVATION
}

"""
Tag key definition (not tied to a device)
"""
type Tag implements Node {
  id: ID!
  key: String!
  description: String
  color: String
  values: [String!]
  organizationId: String!
  createdAt: Instant
}

type TagFilterOption {
  value: String!
  label: String!
  count: Int!
}

"""
Tenant represents a customer organization in the SaaS platform.
"""
type Tenant {
  """
  Unique identifier of the tenant
  """
  id: ID!

  """
  Display name of the tenant organization
  """
  name: String!

  """
  Owner user ID
  """
  ownerId: String

  """
  HubSpot contact ID
  """
  hubspotContactId: String

  """
  HubSpot tenant record ID
  """
  hubspotTenantId: String

  """
  Stripe customer ID
  """
  stripeCustomerId: String

  """
  Current billing plan
  """
  billingPlan: BillingPlan

  """
  Whether the tenant is a test account
  """
  isTest: Boolean!

  """
  Timestamp when the tenant was created
  """
  createdAt: String

  """
  Timestamp when the tenant was last updated
  """
  updatedAt: String
}

type ToolConnection implements Node {
  id: ID!
  machineId: String!
  toolType: ToolType!
  agentToolId: String!
  status: ConnectionStatus!
  metadata: String
  connectedAt: Instant
  lastSyncAt: Instant
  disconnectedAt: Instant
}

type ToolCredentials {
  username: String
  password: String
  apiKey: APIKey
}

input ToolFilterInput {
  enabled: Boolean
  type: String
  category: String
  platformCategory: String
}

"""
Available filter options for tools
"""
type ToolFilters {
  types: [String!]!
  categories: [String!]!
  platformCategories: [String!]!
}

" Simple list type for tools query\n Tools are configuration data with limited quantity (10-50 items)\n No pagination or total count needed"
type ToolList {
  tools: [IntegratedTool!]!
}

enum ToolType {
  MESHCENTRAL
  TACTICAL_RMM
  FLEET_MDM
}

type ToolUrl {
  url: String!
  port: String
  type: ToolUrlType!
}

enum ToolUrlType {
  DASHBOARD
  API
  WS
  DATABASE
  CACHE
  BROKER
  COORDINATOR
  CONTROLLER
  SERVER
  METRICS
  LOGS
  INTERNAL
  NATS
  MINION
}

enum UpdateAction {
  ADD
  CANCEL
}

input UpdateSubscriptionInput {
  packageUpdates: [PackageUpdateInput!]
  paygUpdates: [PaygUpdateInput!]
  discountCode: String
}

type UpdateSubscriptionResult {
  subscription: SubscriptionInfo
  paymentUrl: String
  updatedProducts: [String!]!
}

"""
"""
scalar _FieldSet

type _Service {
  sdl: String!
}
